# Graphx

./: CMakeLists.txt  README.md
application/: app.cpp  app.hpp
assetmanager/: assetmanager.cpp  assetmanager.hpp
assets/engine/shaders/: default.frag  default.vert
assets/materials/: base.material
assets/meshes/: circle.mtl
core/: engine.hpp  window.cpp  window.hpp
dependencies/glad/: glad.c  glad.h
engine/include/: app.hpp  debug.hpp  engine.hpp  scene.hpp  script.hpp  window.hpp
engine/include/rendering/: assetmanager.hpp  material.hpp  mesh.hpp  renderer.hpp  shader.hpp  texture.hpp  uniformbuffer.hpp
engine/include/scene/: object.hpp  scene.hpp  script.hpp
engine/src/: app.cpp  debug.cpp  scene.cpp  stb_image.cpp  utils.cpp  window.cpp
engine/src/rendering/: assetmanager.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  uniformbuffer.cpp
engine/src/scene/: object.cpp  scene.cpp
graphics/include/: app.hpp  utils.hpp  window.hpp
graphics/include/rendering/: assetmanager.hpp  material.hpp  renderer.hpp  shader.hpp  texture.hpp
graphics/include/scene/: object.hpp  scene.hpp  script.hpp
graphics/src/: app.cpp  debug.cpp  utils.cpp  window.cpp
graphics/src/rendering/: assetmanager.cpp  material.cpp  mesh.cpp  renderer.cpp  shader.cpp  texture.cpp  uniformbuffer.cpp
graphics/src/scene/: object.cpp  scene.cpp
physics/include/: integrator.hpp  physicsworld.hpp  rigidbody.hpp
physics/src/: integrator.cpp  physicsworld.cpp  rigidbody.cpp
renderer/: buffer.cpp  buffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  vertex.hpp  vertexarray.cpp  vertexarray.hpp
sandbox/: inputdemo.cpp  main.cpp  texturedemo.cpp  transformdemo.cpp
scene/: components.hpp  mesh_factory.cpp  mesh_factory.hpp  scene.cpp  scene.hpp
utilities/: utils.cpp  utils.hpp
workspace/: main.cpp
